# GeomechPy

./: README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  skills.md  tailwind.config.js
.devcontainer/: devcontainer.json
examples/: 01_basic_calculations.ipynb  02_full_mem_workflow.ipynb  03_deviation_and_near_wellbore_stresses.ipynb  README.md  main.py  requirements.txt
examples/streamlit_apps/: README.md  geomechpy_dashboard.py  geomechpy_mem_dashboard.py
geomechpy/: __init__.py  dataframe_tools.py  dynamic_elastic_properties.py  elastic_properties.py  fracture_gradient.py  mem.py  near_wellbore_stresses.py  overburden_stress.py  plotting.py  pore_pressure.py  rock_strength.py  static_elastic_properties.py  stress_calculations.py  units.py  wellbore_stability.py
src/: App.tsx  index.css
src/calculations/: elasticProperties.ts  index.ts  overburdenStress.ts  porePressure.ts  rockStrength.ts  staticElasticProperties.ts  stressCalculations.ts  wellboreStability.ts
src/components/: CalculatorSection.tsx  ElasticPropertiesCalculator.tsx  HorizontalStressesCalculator.tsx  Layout.tsx  (+3 more)
tests/: test_dataframe_tools.py  test_docstrings.py  test_dynamic_elastic_properties.py  test_fracture_gradient.py  test_integration_workflow.py  test_mem.py  test_near_wellbore_stresses.py  test_overburden_stress.py  test_plotting.py  test_rock_strength.py  test_static_elastic_properties.py  test_streamlit_app.py  test_stress_calculations.py  test_unit_flexibility.py  test_units.py  test_validation.py  test_wellbore_stability.py
(+12 files in other folders)
