[project]
name = "geomechpy"
version = "0.0.1"
license = "LGPL-3.0-only"
description = ""
authors = [
    {name = "Florian Karpfinger"},
    {name = "Alex Kutuev", email = "kutuev93@yandex.ru"}
]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
pandas = [
    "pandas>=1.5",
]
plotting = [
    "matplotlib>=3.6",
]
plotly = [
    "plotly>=5.22",
]
streamlit = [
    "streamlit>=1.40",
    "plotly>=5.22",
    "pandas>=1.5",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

